force-app/main/default/objects/useloom__loom_video__c/useloom__loom_video__c.object-meta.xml
<CustomObject>
    <label>Loom video</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loom videos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>