force-app/main/default/objects/useloom__loom_video__c/fields/useloom__Comment_count__c.field-meta.xml
<CustomField>
    <fullName>useloom__Comment_count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of comments on the Loom video</description>
    <inlineHelpText>Number of comments on the Loom video</inlineHelpText>
    <label>Comment count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>