force-app/main/default/objects/useloom__loom_video__c/fields/useloom__cta_click_count__c.field-meta.xml
<CustomField>
    <fullName>useloom__cta_click_count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of CTA Clicks on the Loom video</description>
    <inlineHelpText>Number of CTA Clicks on the Loom video</inlineHelpText>
    <label>CTA click count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>