force-app/main/default/objects/useloom__loom_video__c/fields/useloom__Full_url__c.field-meta.xml
<CustomField>
    <fullName>useloom__Full_url__c</fullName>
    <description>Full share url for loom video. Example: https://www.loom.com/share/80e63a469b314a9a9d955d63dd1813e6</description>
    <formula>&quot;https://www.loom.com/share/&quot; &amp; useloom__Video_shared_link_id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full url</label>
    <type>Text</type>
</CustomField>