force-app/main/default/objects/useloom__loom_video__c/fields/useloom__Owner_email__c.field-meta.xml
<CustomField>
    <fullName>useloom__Owner_email__c</fullName>
    <description>The loom video creator&apos;s email. This can be used to map Loom&apos;s video object to a Salesforce user.</description>
    <label>Owner email</label>
    <type>Email</type>
</CustomField>