force-app/main/default/objects/useloom__loom_video__c/fields/useloom__Percentage_completion__c.field-meta.xml
<CustomField>
    <fullName>useloom__Percentage_completion__c</fullName>
    <defaultValue>0</defaultValue>
    <description>% of the video completed by the video viewer</description>
    <inlineHelpText>% of the video completed by the video viewer</inlineHelpText>
    <label>Percentage completion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>