force-app/main/default/objects/useloom__loom_video__c/fields/useloom__Reaction_count__c.field-meta.xml
<CustomField>
    <fullName>useloom__Reaction_count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of total reactions on the video, regardless of reaction type</description>
    <inlineHelpText>Number of total reactions on the video, regardless of reaction type</inlineHelpText>
    <label>Reaction count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>