force-app/main/default/objects/useloom__loom_video__c/fields/useloom__shared_link_id_and_email__c.field-meta.xml
<CustomField>
    <fullName>useloom__shared_link_id_and_email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Composite key that can uniquely identify a loom video object. 

Contains (useloom__Video_shared_link_id__c, useloom__Viewer_email__c)</description>
    <externalId>true</externalId>
    <label>Shared Link Id + Email</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>