force-app/main/default/objects/useloom__loom_video__c/fields/useloom__useloom_video_contact__c.field-meta.xml
<CustomField>
    <fullName>useloom__useloom_video_contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Loom videos</relationshipLabel>
    <relationshipName>Loom_videos</relationshipName>
    <type>Lookup</type>
</CustomField>