force-app/main/default/objects/useloom__loom_video__c/fields/useloom__video_lead__c.field-meta.xml
<CustomField>
    <fullName>useloom__video_lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Loom videos</relationshipLabel>
    <relationshipName>Loom_videos</relationshipName>
    <type>Lookup</type>
</CustomField>