force-app/main/default/objects/useloom__loom_video__c/fields/useloom__Video_shared_link_id__c.field-meta.xml
<CustomField>
    <fullName>useloom__Video_shared_link_id__c</fullName>
    <description>Unique identifier of the shared link</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique identifier of the shared link</inlineHelpText>
    <label>Video shared link id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>