force-app/main/default/objects/useloom__loom_video__c/fields/useloom__Video_title__c.field-meta.xml
<CustomField>
    <fullName>useloom__Video_title__c</fullName>
    <description>Name given to the video by the video creator</description>
    <inlineHelpText>Name given to the video by the video creator</inlineHelpText>
    <label>Video title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>