force-app/main/default/objects/useloom__loom_video__c/fields/useloom__View_count__c.field-meta.xml
<CustomField>
    <fullName>useloom__View_count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of times the video was viewed</description>
    <inlineHelpText>Number of times the video was viewed</inlineHelpText>
    <label>View count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>