force-app/main/default/objects/useloom__loom_video__c/fields/useloom__Viewer_email__c.field-meta.xml
<CustomField>
    <fullName>useloom__Viewer_email__c</fullName>
    <description>Email of the viewer linked to the Unique URL</description>
    <inlineHelpText>Email of the viewer linked to the Unique URL</inlineHelpText>
    <label>Viewer email</label>
    <type>Email</type>
</CustomField>